# stock-tickers

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: generate_models.py
src/stock_ticker_api/: main.py
src/stock_ticker_api/auth/: auth.py
src/stock_ticker_api/models/: stock_model.py
src/stock_ticker_api/models/schemas/: stock_schema.json
src/stock_ticker_api/services/: stock_service.py
src/stock_ticker_api/sockets/: stock_socket.py
