[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend =  "setuptools.build_meta"

[project]
name = "stock-ticker-api"
version = "0.1.0"
description = "Simple FastAPI WebSocket Stock Tickers Project for Python upskilling"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.9",
    "datamodel-code-generator>=0.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3"
]
